--- a/Polyfills/index.html
+++ b/Polyfills/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <script src="./index.js"></script>
+    <script src="./pipe.js"></script>
+    <script src="./compose.js"></script>
+    <script src="./map.js"></script>
+    <script src="./filter.js"></script>
+    <script src="./reduce.js"></script>
 </body>
 </html>
